Fix layout shift

--- a/app/global.module.css
+++ b/app/global.module.css
@@ -47,4 +47,36 @@
   :global(:focus:not(:focus-visible)) {
     outline: none;
   }
+
+  @keyframes :global(fadeIn) {
+    0% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @keyframes :global(reveal) {
+    0% {
+      transform: scale3d(0, 1, 1);
+      transform-origin: left;
+    }
+
+    50% {
+      transform: scale3d(1, 1, 1);
+      transform-origin: left;
+    }
+
+    51% {
+      transform: scale3d(1, 1, 1);
+      transform-origin: right;
+    }
+
+    100% {
+      transform: scale3d(0, 1, 1);
+      transform-origin: right;
+    }
+  }
 }
