--- a/app/routes/home/intro.module.css
+++ b/app/routes/home/intro.module.css
@@ -197,7 +197,7 @@
 
   &[data-status='entering'] {
     &:global {
-      animation-name: fadeIn;
+      animation-name: fade-in;
     }
 
     @media (--mediaUseMotion) {
